Created product type, blocks, workflows and migration files

--- a/translations/en-GB.json
+++ b/translations/en-GB.json
@@ -1,63 +1,67 @@
 {
-   "forms" : {
-      "fields" : {
-         "role_id" : "Node role",
-         "role_id_info" : "Functional role of the node in the network",
-         "type_id" : "Node type",
-         "type_id_info" : "Hardware make and model",
-         "site_id" : "Site",
-         "site_id_info" : "Location of the node",
-         "node_status" : "Node status",
-         "node_status_info" : "Operational status of the node",
-         "node_name" : "Node name",
-         "node_name_info" : "Unique name of node in IMS",
-         "node_description" : "Node description",
-         "node_description_info" : "Description of the node",
-         "node_subscription_id" : "Node",
-         "port_ims_id" : "Port",
-         "port_ims_id_info" : "Free port on node",
-         "port_description" : "Port description",
-         "port_description_info" : "Description of the port",
-         "port_mode" : "Port mode",
-         "port_mode_info" : "Mode of the port (tagged/untagged/link member)",
-         "auto_negotiation" : "Auto-Negotiation",
-         "auto_negotiation_info" : "Enable Ethernet Auto-Negotiation?",
-         "lldp" : "LLDP",
-         "lldp_info" : "Enable Link Layer Discovery Protocol?",
-         "number_of_ports" : "Number of ports",
-         "speed" : "Speed",
-         "speed_info" : "Speed in Mbit/s",
-         "speed_policer" : "Speed policer",
-         "speed_policer_info" : "Enforce the speed?",
-         "ports" : "Ports",
-         "vlan" : "VLAN",
-         "node_subscription_id_a" : "A side node",
-         "node_subscription_id_b" : "B side node",
-         "port_ims_id_a" : "A side port",
-         "port_ims_id_b" : "b side port",
-         "under_maintenance" : "Maintenance",
-         "under_maintenance_info" : "Enable maintenance mode?",
-         "annihilate": "Are you sure you want to wipe the complete administration from Netbox?",
-         "annihilate_info": "To continue, you have to check this box"
-      }
-   },
-   "workflow" : {
-      "create_core_link" : "Create core_link",
-      "create_l2vpn" : "Create l2vpn",
-      "create_node" : "Create node",
-      "create_port" : "Create port",
-      "modify_core_link" : "Modify core_link",
-      "modify_l2vpn" : "Modify l2vpn",
-      "modify_node" : "Modify node",
-      "modify_port" : "Modify port",
-      "terminate_core_link" : "Terminate core_link",
-      "terminate_l2vpn" : "Terminate l2vpn",
-      "terminate_node" : "Terminate node",
-      "terminate_port" : "Terminate port",
-      "validate_core_link" : "Validate core_link",
-      "validate_l2vpn" : "Validate l2vpn",
-      "validate_node" : "Validate node",
-      "validate_port" : "Validate port",
-      "modify_sync_ports" : "Sync ports with IMS"
-   }
+  "forms": {
+    "fields": {
+      "annihilate": "Are you sure you want to wipe the complete administration from Netbox?",
+      "annihilate_info": "To continue, you have to check this box",
+      "auto_negotiation": "Auto-Negotiation",
+      "auto_negotiation_info": "Enable Ethernet Auto-Negotiation?",
+      "lldp": "LLDP",
+      "lldp_info": "Enable Link Layer Discovery Protocol?",
+      "node_description": "Node description",
+      "node_description_info": "Description of the node",
+      "node_name": "Node name",
+      "node_name_info": "Unique name of node in IMS",
+      "node_status": "Node status",
+      "node_status_info": "Operational status of the node",
+      "node_subscription_id": "Node",
+      "node_subscription_id_a": "A side node",
+      "node_subscription_id_b": "B side node",
+      "number_of_ports": "Number of ports",
+      "port_description": "Port description",
+      "port_description_info": "Description of the port",
+      "port_ims_id": "Port",
+      "port_ims_id_a": "A side port",
+      "port_ims_id_b": "b side port",
+      "port_ims_id_info": "Free port on node",
+      "port_mode": "Port mode",
+      "port_mode_info": "Mode of the port (tagged/untagged/link member)",
+      "ports": "Ports",
+      "role_id": "Node role",
+      "role_id_info": "Functional role of the node in the network",
+      "site_id": "Site",
+      "site_id_info": "Location of the node",
+      "speed": "Speed",
+      "speed_info": "Speed in Mbit/s",
+      "speed_policer": "Speed policer",
+      "speed_policer_info": "Enforce the speed?",
+      "type_id": "Node type",
+      "type_id_info": "Hardware make and model",
+      "under_maintenance": "Maintenance",
+      "under_maintenance_info": "Enable maintenance mode?",
+      "vlan": "VLAN"
+    }
+  },
+  "workflow": {
+    "create_core_link": "Create core_link",
+    "create_l2vpn": "Create l2vpn",
+    "create_node": "Create node",
+    "create_nsistp": "Create nsistp",
+    "create_port": "Create port",
+    "modify_core_link": "Modify core_link",
+    "modify_l2vpn": "Modify l2vpn",
+    "modify_node": "Modify node",
+    "modify_nsistp": "Modify nsistp",
+    "modify_port": "Modify port",
+    "modify_sync_ports": "Sync ports with IMS",
+    "terminate_core_link": "Terminate core_link",
+    "terminate_l2vpn": "Terminate l2vpn",
+    "terminate_node": "Terminate node",
+    "terminate_nsistp": "Terminate nsistp",
+    "terminate_port": "Terminate port",
+    "validate_core_link": "Validate core_link",
+    "validate_l2vpn": "Validate l2vpn",
+    "validate_node": "Validate node",
+    "validate_nsistp": "Validate nsistp",
+    "validate_port": "Validate port"
+  }
 }
